# mp2-lab1-set

./: .travis.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BitField.docx  Bit_Field.docx  Bitovye_polya.docx  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  set.sln
Debug/: Битовые поля.docx
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
include/: tbitfield.h  tset.h
samples/: cmake_install.cmake  sample_prime_numbers.cpp  sample_prime_numbers.vcxproj  sample_prime_numbers.vcxproj.filters
samples/sample_prime_numbers.dir/Debug/sample_p.4D0E7FED.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: cmake_install.cmake  set.vcxproj  set.vcxproj.filters  tbitfield.cpp  tset.cpp
src/set.dir/Debug/set.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  (+2 more)
test/: cmake_install.cmake  test_set.vcxproj  test_set.vcxproj.filters  test_tbitfield.cpp
time_check/: CMakeLists.txt  cmake_install.cmake  time_check.cpp  time_check.vcxproj  time_check.vcxproj.filters
time_check/time_check.dir/Debug/time_check.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+9 files in other folders)
